<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/demo_profile_bg"
    tools:context=".profile.AboutIMActivity">

    <com.tencent.qcloud.tuikit.timcommon.component.TitleBarLayout
        android:id="@+id/about_im_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/about_sdk_version_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:name="@string/demo_about_sdk_version" />

    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/about_im_privacy_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/im_privacy" />
    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/about_user_agreement_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/im_user_agreement" />
    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/about_statement_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/im_statement" />

    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/self_infomation_collection_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/self_infomation_collection_list" />

    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/third_part_shared_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/third_part_shared_list" />

    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/cancel_account_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/cancel_account" />

    <com.tencent.qcloud.tuikit.timcommon.component.LineControllerView
        android:id="@+id/about_im_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demo_profile_item_height"
        app:canNav="true"
        app:isTop="true"
        app:name="@string/demo_contact_us" />

</LinearLayout>