<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".profile.AboutIMActivity">

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistTitleBar
        android:id="@+id/about_im_title_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp" />

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/about_sdk_version_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:name="@string/demo_about_sdk_version" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>


    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/about_im_privacy_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/im_privacy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/about_user_agreement_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/im_user_agreement" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/about_statement_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/im_statement" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/self_infomation_collection_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/self_infomation_collection_list" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/third_part_shared_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/third_part_shared_list" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/cancel_account_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/cancel_account" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>

    <com.tencent.qcloud.tuikit.timcommon.component.MinimalistLineControllerView
        android:id="@+id/about_im_lv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:canNav="true"
        app:name="@string/demo_contact_us" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#1A000000"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layoutDirection="ltr"
        android:paddingBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/icp_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:background="@drawable/common_item_pressed_effect_background"
                android:textColor="#756F6F"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/company_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#756F6F"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/copyright_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#756F6F"
                android:textSize="11sp" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>