<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/account"
                android:textColor="#000" />

            <EditText
                android:id="@+id/login_user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_user_tips"
                android:textCursorDrawable="@drawable/my_cursor"
                android:singleLine="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_split_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="#000" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:hint="@string/login_password_tips"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/my_cursor"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/item_split_color" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/button_login"
            android:textColor="#fff" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66666666"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loading_iv"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_centerInParent="true"
            android:src="@drawable/loading_animation" />
    </RelativeLayout>

</RelativeLayout>